# Quillo

./: .gitignore  README.md  install.sh
backend/: pyproject.toml  requirements.txt
backend/quillo/: __init__.py  auth_routes.py  database.py  main.py  models.py  papers_routes.py  security.py  templates_routes.py
backend/quillo/seed_data/templates/: acl.tex  article-basic.tex  article-korean.tex  article-twocolumn.tex  beamer-presentation.tex  cvpr.tex  elsevier-apsusc.tex  elsevier-final-1col.tex  elsevier-final-2col.tex  elsevier-jallcom.tex  elsevier-jmapro.tex  elsevier-matchar.tex  elsevier-micrel.tex  icml.tex  ieee-conference.tex  ieee-journal.tex  ieee-letter.tex  ieee-peerreview.tex  manifest.json  neurips.tex  report-thesis.tex  revtex-apl.tex  revtex-jap.tex  revtex-prapplied.tex  revtex-prb.tex  revtex-preprint.tex  springer-lncs.tex
backend/tests/: conftest.py  test_smoke.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/users/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/papers/: page.tsx
frontend/src/app/papers/[id]/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: LatexEditor.tsx  LatexToolbar.tsx  PdfViewer.tsx
frontend/src/lib/: api.ts
frontend/tests/: smoke.e2e.mjs
scripts/: dev.sh  restart.sh  setup.sh  start.sh  stop.sh
