[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quillo"
version = "1.0.0"
description = "Quillo — collaborative LaTeX paper workspace (extractable FastAPI package)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "sqlalchemy>=2.0",
    "pydantic>=2.10",
    "python-multipart>=0.0.20",
]

# Package directory: quillo/ (papers_routes, templates_routes, models, ...)
[tool.setuptools]
packages = ["quillo"]

# Templates (.tex/.cls/.sty/manifest) are also included as package data
[tool.setuptools.package-data]
quillo = ["seed_data/templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
